fix style / stat dark mode

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13589,7 +13589,7 @@ label:active:after {
 .card__item .card_head {
   border-radius: 30px;
   background-color: #ecf1f9;
-  height: 280px;
+  /*height: 280px;*/
   overflow: hidden;
   position: relative;
   z-index: 0;
