--- a/src/pages/CollectionList/styles.module.scss
+++ b/src/pages/CollectionList/styles.module.scss
@@ -1,3 +1,20 @@
+:global {
+  .is__dark {
+    :local
+    {
+      .collectionDescription {
+        :global
+        {
+          .box {
+            background: #0b1b27 !important;
+          }
+        }
+      }
+    }
+    
+  }
+}
+
 .collectionDescription {
   display: flex;
   .logo img {
@@ -9,9 +26,8 @@
   h1 {
     font-size: 20px;
   }
-  p
-  {
-    margin-top:10px;
+  p {
+    margin-top: 10px;
   }
   .ownedby {
     font-size: 14px;
@@ -21,10 +37,10 @@
     }
   }
   .links {
-    display:flex;
+    display: flex;
     align-items: center;
-    a{
-      margin-right:5px;
+    a {
+      margin-right: 5px;
     }
     .address {
       font-size: 12px;
@@ -33,41 +49,36 @@
       padding: 2px 10px;
       width: fit-content;
       border-radius: 30px;
-
     }
   }
 
-  :global
-  {
-    .box:last-child
-    {
-      margin-right:0;
+  :global {
+    .box:last-child {
+      margin-right: 0;
     }
-    .box
-    {
-      flex:1;
-      display:flex;
+
+    .box {
+      flex: 1;
+      display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items:center;
-      margin-top:20px;
-      margin-bottom:10px;
+      align-items: center;
+      margin-top: 20px;
+      margin-bottom: 10px;
       border-radius: 10px;
-      background:#FCFCFC;
-      border:0;
-      box-shadow: 2px 2px 0px rgba(0,0,0,0.05);
-      margin-right:10px;
+      background: #fcfcfc;
+      border: 0;
+      box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.05);
+      margin-right: 10px;
       font-weight: bold;
-      color:#868686;
-      padding:10px;
+      color: #868686;
+      padding: 10px;
       text-align: center;
-      span
-      {
-        color:#00a59a;
-        
-        font-size:26px;
+      span {
+        color: #00a59a;
+
+        font-size: 26px;
       }
     }
   }
-
 }
